horizontal scroll issue is resolved

--- a/frontend/stylesheets/home-page.css.scss
+++ b/frontend/stylesheets/home-page.css.scss
@@ -133,7 +133,8 @@
       border-left: 1px solid #e6e6e6;
       width: 100%;
       height: 664px;
-      overflow: scroll;
+      overflow-y: scroll;
+      overflow-x: hidden;
       position: relative;
     }
 
